--- a/style.css
+++ b/style.css
@@ -58,11 +58,13 @@ div {
     background-color: rgba(125,125,125,0);
 }
 
-h1, p, img {
+h1, p {
     margin-left: 7px;
     margin-right: 7px;
 }
 img {
     height: 300px;
     width: 240px;
+    margin-left: auto;
+    margin-right: auto;
 }
